infra/cilium/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: cilium
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - hubble.local.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathMatchPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
